      in data streamers. (jing9)

      HDFS-8557. Allow to configure RS and XOR raw coders (Kai Zheng)

      HDFS-9206. Inconsistent default value of dfs.datanode.stripedread.buffer.size.
      (Walter Su via jing9)

      HDFS-9209. Erasure coding: Add apache license header in
      TestFileStatusWithECPolicy.java. (Surendra Singh Lilhore via jing9)

Release 2.8.0 - UNRELEASED

  NEW FEATURES

    HDFS-7891. A block placement policy with best rack failure tolerance.
    (Walter Su via szetszwo)

    HDFS-8131. Implement a space balanced block placement policy (Liu Shaohui
    via kihwal)

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

  IMPROVEMENTS

    HDFS-2390. dfsadmin -setBalancerBandwidth does not validate -ve value
    (Gautam Gopalakrishnan via harsh)

    HDFS-8821. Explain message "Operation category X is not supported
    in state standby" (Gautam Gopalakrishnan via harsh)

    HDFS-3918. EditLogTailer shouldn't log WARN when other node
    is in standby mode (todd via harsh)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-7875. Improve log message when wrong value configured for
    dfs.datanode.failed.volumes.tolerated.
    (nijel via harsh)

    HDFS-2360. Ugly stacktrace when quota exceeds. (harsh)

    HDFS-7835. make initial sleeptime in locateFollowingBlock configurable for
    DFSClient. (Zhihai Xu via Yongjun Zhang)

    HDFS-7829. Code clean up for LocatedBlock. (Takanobu Asanuma via jing9)

    HDFS-7854. Separate class DataStreamer out of DFSOutputStream. (Li Bo via
    jing9)

    HDFS-7713. Implement mkdirs in the HDFS Web UI. (Ravi Prakash via wheat9)

    HDFS-7928. Scanning blocks from disk during rolling upgrade startup takes
    a lot of time if disks are busy (Rushabh S Shah via kihwal)

    HDFS-7990. IBR delete ack should not be delayed. (daryn via kihwal)

    HDFS-8004. Use KeyProviderCryptoExtension#warmUpEncryptedKeys when creating
    an encryption zone. (awang via asuresh)
