@@ -192,6 +192,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|ipc
+operator|.
+name|RemoteException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|test
 operator|.
 name|GenericTestUtils
@@ -217,6 +231,16 @@ operator|.
 name|junit
 operator|.
 name|After
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
 import|;
 end_import
 
@@ -257,6 +281,26 @@ operator|.
 name|nio
 operator|.
 name|ByteBuffer
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
 import|;
 end_import
 
@@ -477,6 +521,24 @@ operator|.
 name|build
 argument_list|()
 expr_stmt|;
+name|fs
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/ec"
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|cluster
 operator|.
 name|getFileSystem
@@ -487,17 +549,10 @@ argument_list|()
 operator|.
 name|setErasureCodingPolicy
 argument_list|(
-literal|"/"
+literal|"/ec"
 argument_list|,
 literal|null
 argument_list|)
-expr_stmt|;
-name|fs
-operator|=
-name|cluster
-operator|.
-name|getFileSystem
-argument_list|()
 expr_stmt|;
 block|}
 annotation|@
@@ -536,14 +591,14 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/EmptyFile"
+literal|"/ec/EmptyFile"
 argument_list|,
 literal|0
 argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/EmptyFile2"
+literal|"/ec/EmptyFile2"
 argument_list|,
 literal|0
 argument_list|,
@@ -563,14 +618,14 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneCell"
+literal|"/ec/SmallerThanOneCell"
 argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneCell2"
+literal|"/ec/SmallerThanOneCell2"
 argument_list|,
 literal|1
 argument_list|,
@@ -590,7 +645,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneCell"
+literal|"/ec/SmallerThanOneCell"
 argument_list|,
 name|cellSize
 operator|-
@@ -599,7 +654,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneCell2"
+literal|"/ec/SmallerThanOneCell2"
 argument_list|,
 name|cellSize
 operator|-
@@ -621,14 +676,14 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/EqualsWithOneCell"
+literal|"/ec/EqualsWithOneCell"
 argument_list|,
 name|cellSize
 argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/EqualsWithOneCell2"
+literal|"/ec/EqualsWithOneCell2"
 argument_list|,
 name|cellSize
 argument_list|,
@@ -648,7 +703,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneStripe"
+literal|"/ec/SmallerThanOneStripe"
 argument_list|,
 name|cellSize
 operator|*
@@ -659,7 +714,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneStripe2"
+literal|"/ec/SmallerThanOneStripe2"
 argument_list|,
 name|cellSize
 operator|*
@@ -683,7 +738,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneStripe"
+literal|"/ec/SmallerThanOneStripe"
 argument_list|,
 name|cellSize
 operator|+
@@ -692,7 +747,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/SmallerThanOneStripe2"
+literal|"/ec/SmallerThanOneStripe2"
 argument_list|,
 name|cellSize
 operator|+
@@ -714,7 +769,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/EqualsWithOneStripe"
+literal|"/ec/EqualsWithOneStripe"
 argument_list|,
 name|cellSize
 operator|*
@@ -723,7 +778,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/EqualsWithOneStripe2"
+literal|"/ec/EqualsWithOneStripe2"
 argument_list|,
 name|cellSize
 operator|*
@@ -745,7 +800,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanOneStripe1"
+literal|"/ec/MoreThanOneStripe1"
 argument_list|,
 name|cellSize
 operator|*
@@ -756,7 +811,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanOneStripe12"
+literal|"/ec/MoreThanOneStripe12"
 argument_list|,
 name|cellSize
 operator|*
@@ -780,7 +835,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanOneStripe2"
+literal|"/ec/MoreThanOneStripe2"
 argument_list|,
 name|cellSize
 operator|*
@@ -795,7 +850,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanOneStripe22"
+literal|"/ec/MoreThanOneStripe22"
 argument_list|,
 name|cellSize
 operator|*
@@ -823,7 +878,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/LessThanFullBlockGroup"
+literal|"/ec/LessThanFullBlockGroup"
 argument_list|,
 name|cellSize
 operator|*
@@ -840,7 +895,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/LessThanFullBlockGroup2"
+literal|"/ec/LessThanFullBlockGroup2"
 argument_list|,
 name|cellSize
 operator|*
@@ -870,7 +925,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/FullBlockGroup"
+literal|"/ec/FullBlockGroup"
 argument_list|,
 name|blockSize
 operator|*
@@ -879,7 +934,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/FullBlockGroup2"
+literal|"/ec/FullBlockGroup2"
 argument_list|,
 name|blockSize
 operator|*
@@ -901,7 +956,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanABlockGroup1"
+literal|"/ec/MoreThanABlockGroup1"
 argument_list|,
 name|blockSize
 operator|*
@@ -912,7 +967,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanABlockGroup12"
+literal|"/ec/MoreThanABlockGroup12"
 argument_list|,
 name|blockSize
 operator|*
@@ -936,7 +991,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanABlockGroup2"
+literal|"/ec/MoreThanABlockGroup2"
 argument_list|,
 name|blockSize
 operator|*
@@ -949,7 +1004,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanABlockGroup22"
+literal|"/ec/MoreThanABlockGroup22"
 argument_list|,
 name|blockSize
 operator|*
@@ -975,7 +1030,7 @@ name|Exception
 block|{
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanABlockGroup3"
+literal|"/ec/MoreThanABlockGroup3"
 argument_list|,
 name|blockSize
 operator|*
@@ -994,7 +1049,7 @@ argument_list|)
 expr_stmt|;
 name|testOneFileUsingDFSStripedInputStream
 argument_list|(
-literal|"/MoreThanABlockGroup32"
+literal|"/ec/MoreThanABlockGroup32"
 argument_list|,
 name|blockSize
 operator|*
@@ -1510,6 +1565,368 @@ name|smallBuf
 argument_list|)
 expr_stmt|;
 comment|// webhdfs doesn't support bytebuffer read
+block|}
+annotation|@
+name|Test
+DECL|method|testConcat ()
+specifier|public
+name|void
+name|testConcat
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|byte
+index|[]
+name|data
+init|=
+name|StripedFileTestUtil
+operator|.
+name|generateBytes
+argument_list|(
+name|blockSize
+operator|*
+name|dataBlocks
+operator|*
+literal|10
+operator|+
+literal|234
+argument_list|)
+decl_stmt|;
+name|int
+name|totalLength
+init|=
+literal|0
+decl_stmt|;
+name|Random
+name|r
+init|=
+operator|new
+name|Random
+argument_list|()
+decl_stmt|;
+name|Path
+name|target
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/ec/testConcat_target"
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|writeFile
+argument_list|(
+name|fs
+argument_list|,
+name|target
+argument_list|,
+name|Arrays
+operator|.
+name|copyOfRange
+argument_list|(
+name|data
+argument_list|,
+literal|0
+argument_list|,
+literal|123
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|totalLength
+operator|+=
+literal|123
+expr_stmt|;
+name|int
+name|numFiles
+init|=
+literal|5
+decl_stmt|;
+name|Path
+index|[]
+name|srcs
+init|=
+operator|new
+name|Path
+index|[
+name|numFiles
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numFiles
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|srcs
+index|[
+name|i
+index|]
+operator|=
+operator|new
+name|Path
+argument_list|(
+literal|"/ec/testConcat_src_file_"
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
+name|int
+name|srcLength
+init|=
+name|r
+operator|.
+name|nextInt
+argument_list|(
+name|blockSize
+operator|*
+name|dataBlocks
+operator|*
+literal|2
+argument_list|)
+operator|+
+literal|1
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|writeFile
+argument_list|(
+name|fs
+argument_list|,
+name|srcs
+index|[
+name|i
+index|]
+argument_list|,
+name|Arrays
+operator|.
+name|copyOfRange
+argument_list|(
+name|data
+argument_list|,
+name|totalLength
+argument_list|,
+name|totalLength
+operator|+
+name|srcLength
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|totalLength
+operator|+=
+name|srcLength
+expr_stmt|;
+block|}
+name|fs
+operator|.
+name|concat
+argument_list|(
+name|target
+argument_list|,
+name|srcs
+argument_list|)
+expr_stmt|;
+name|StripedFileTestUtil
+operator|.
+name|verifyStatefulRead
+argument_list|(
+name|fs
+argument_list|,
+name|target
+argument_list|,
+name|totalLength
+argument_list|,
+name|Arrays
+operator|.
+name|copyOfRange
+argument_list|(
+name|data
+argument_list|,
+literal|0
+argument_list|,
+name|totalLength
+argument_list|)
+argument_list|,
+operator|new
+name|byte
+index|[
+literal|1024
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testConcatWithDifferentECPolicy ()
+specifier|public
+name|void
+name|testConcatWithDifferentECPolicy
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|byte
+index|[]
+name|data
+init|=
+name|StripedFileTestUtil
+operator|.
+name|generateBytes
+argument_list|(
+name|blockSize
+operator|*
+name|dataBlocks
+argument_list|)
+decl_stmt|;
+name|Path
+name|nonECFile
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/non_ec_file"
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|writeFile
+argument_list|(
+name|fs
+argument_list|,
+name|nonECFile
+argument_list|,
+name|data
+argument_list|)
+expr_stmt|;
+name|Path
+name|target
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/ec/non_ec_file"
+argument_list|)
+decl_stmt|;
+name|fs
+operator|.
+name|rename
+argument_list|(
+name|nonECFile
+argument_list|,
+name|target
+argument_list|)
+expr_stmt|;
+name|int
+name|numFiles
+init|=
+literal|2
+decl_stmt|;
+name|Path
+index|[]
+name|srcs
+init|=
+operator|new
+name|Path
+index|[
+name|numFiles
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numFiles
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|srcs
+index|[
+name|i
+index|]
+operator|=
+operator|new
+name|Path
+argument_list|(
+literal|"/ec/testConcat_src_file_"
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|writeFile
+argument_list|(
+name|fs
+argument_list|,
+name|srcs
+index|[
+name|i
+index|]
+argument_list|,
+name|data
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+name|fs
+operator|.
+name|concat
+argument_list|(
+name|target
+argument_list|,
+name|srcs
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"non-ec file shouldn't concat with ec file"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RemoteException
+name|e
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"have different erasure coding policy"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
