@@ -832,6 +832,9 @@ Trunk (Unreleased)
       HDFS-9209. Erasure coding: Add apache license header in
       TestFileStatusWithECPolicy.java. (Surendra Singh Lilhore via jing9)
 
+      HDFS-8438. Erasure Coding: Allow concat striped files if they have the same
+      ErasureCodingPolicy. (Walter Su via jing9)
+
 Release 2.8.0 - UNRELEASED
 
   NEW FEATURES
